# upstate

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN-auto-service-names.md  README.md  install.sh  justfile  rustfmt.toml
.github/workflows/: build.yml
cross-build/: Dockerfile  config.toml
etc/: upstate.conf
etc/upstate.conf.d/: 00-system-default  10-system-required  20-docker  90-local
etc/upstate.toml.d/: 00-system-default.toml  10-system-required.toml  20-docker.toml  90-local.toml
man/man1/: upstate.1
src/: conf.rs  fmt.rs  main.rs  proc.rs
